[Wayland] ERROR: Potential deadlock detected:
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | unaffected |
firefox91 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
When popup is closed there's a message on debug build:
###!!! ERROR: Potential deadlock detected:
=== Cyclical dependency starts at
--- Mutex : WindowSurfaceWayland lock calling context
[stack trace unavailable]
--- Next dependency:
--- Mutex : MozContainer lock (currently acquired)
calling context
[stack trace unavailable]
=== Cycle completed at
--- Mutex : WindowSurfaceWayland lock calling context
[stack trace unavailable]
Deadlock may happen for some other execution
[Parent 31358, Main Thread] WARNING: Potential deadlock detected:
Cyclical dependency starts at
Mutex : WindowSurfaceWayland lock
Next dependency:
Mutex : MozContainer lock (currently acquired)
Cycle completed at
Mutex : WindowSurfaceWayland lock
Deadlock may happen for some other execution
: file /raid/src3/xpcom/threads/BlockingResourceBase.cpp:247
Assignee | ||
Comment 1•2 years ago
|
||
Assignee | ||
Comment 2•2 years ago
|
||
Depends on D118078
Comment 3•2 years ago
|
||
For the record, issues like these make me even more eager to land bug 1708416 so we can hopefully avoid some complexity involved here.
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/09e90d1b7c7b [Wayland] Don't lock WindowSurfaceWayland at WindowSurfaceWayland::Reset(), r=rmader https://hg.mozilla.org/integration/autoland/rev/8f1b77b41092 [Wayland] Call WindowSurfaceWayland::Reset() from moz_container_wayland_surface_create_locked(), r=rmader
Comment 5•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/09e90d1b7c7b
https://hg.mozilla.org/mozilla-central/rev/8f1b77b41092
Updated•2 years ago
|
Comment 6•2 years ago
|
||
Set release status flags based on info from the regressing bug 1716563
Updated•2 years ago
|
Description
•