Bug 1716850 [Wayland] Call WindowSurfaceWayland::Reset() from moz_container_wayland_surface_create_locked(), r=rmader

Depends on D118078

Differential Revision: https://phabricator.services.mozilla.com/D118079